# lua_tablelite

./: .gitignore  CMakeLists.txt
dependencies/lsqlite3/: CMakeLists.txt  lsqlite3-0.9.3-0.rockspec
dependencies/lsqlite3/dependencies/sqlite3/: CMakeLists.txt
dependencies/lsqlite3/src/: CMakeLists.txt  lsqlite3.version
src/db/: init.lua  scheme.lua
tests/: test.lua
